import ProjectDescription

let workspace = Workspace(
    name: "BowWow",
    projects: ["."]
)